# pokemon_opengl_game

./: .gitignore  CMakeLists.txt  Lab9  Makefile  README.md
shaders/: lightCube.vert  rain.frag  rain.vert  shaderStart.frag  shaderStart.vert  splash.frag  splash.vert
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp
src/camera/: Camera.cpp  Camera.hpp
src/core/: Engine.cpp  Engine.hpp
src/entities/: Pokemon.cpp  Pokemon.hpp
src/graphics/effects/: Rain.cpp  Rain.hpp
src/graphics/models/: Mesh.hpp  Model3D.hpp
src/input/: Controls.cpp  Controls.hpp
